// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`storage-settings-webhook-form Renders \`storage-settings-webhook-form\` with custom form and history 1`] = `
<div
  class="layout column"
>
  <div
    class="layout c-information-block column"
  >
    <div
      class="layout"
    >
      <div
        class="text-subtitle-1 font-weight-bold"
      >
      Webhooks data storage
      </div>
      <c-help-icon-stub
        color="info"
        icon-class="ml-2"
        max-width="300"
        text="All webhook requests history is kept in logs"
        top=""
      />
    </div>
    <div
      class="layout mt-2"
    >
      <span
        class="text--secondary"
      >
        <storage-settings-history-message-stub
          history="1611250000"
        />
      </span>
    </div>
    <c-enabled-duration-field-stub
      help-text="All webhook requests history older than the defined time period will be deleted"
      label="Clear webhooks logs after"
      name="webhook.delete_after"
      value="[object Object]"
    />
    <c-enabled-field-stub
      name="webhook.log_credentials"
      value="true"
    >
        Open auth data in logs
      <c-help-icon-stub
        color="info"
        icon-class="ml-2"
        text="When enabled, all credentials and auth data is written in logs in open way (not recommended). 
When disabled, all passwords, tokens and auth data is hidden and written as *** in logs."
        top=""
      />
    </c-enabled-field-stub>
  </div>
</div>
`;

exports[`storage-settings-webhook-form Renders \`storage-settings-webhook-form\` with default form 1`] = `
<div
  class="layout column"
>
  <div
    class="layout c-information-block column"
  >
    <div
      class="layout"
    >
      <div
        class="text-subtitle-1 font-weight-bold"
      >
      Webhooks data storage
      </div>
      <c-help-icon-stub
        color="info"
        icon-class="ml-2"
        max-width="300"
        text="All webhook requests history is kept in logs"
        top=""
      />
    </div>
    <!---->
    <c-enabled-duration-field-stub
      help-text="All webhook requests history older than the defined time period will be deleted"
      label="Clear webhooks logs after"
      name="webhook.delete_after"
      value="[object Object]"
    />
    <c-enabled-field-stub
      name="webhook.log_credentials"
    >
        Open auth data in logs
      <c-help-icon-stub
        color="info"
        icon-class="ml-2"
        text="When enabled, all credentials and auth data is written in logs in open way (not recommended). 
When disabled, all passwords, tokens and auth data is hidden and written as *** in logs."
        top=""
      />
    </c-enabled-field-stub>
  </div>
</div>
`;
